[Misc] Convert tests to JUnit5 + cleanup tests
(cherry picked from commit ce3d787b03a084c22efecfbdb48a46c1d9c25f3c)